--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <div class="container-wide">
           <div class="row row-50">
             <div class="col-sm-12">
-              <h3>Latest News</h3>
+              <h3><a href="走读电子出入证.html">About UsLatest News</a></h3>
               <div class="divider divider-decorate"></div>
               <!-- Owl Carousel-->
               <div class="owl-carousel owl-carousel-team owl-carousel-inset" data-items="1" data-md-items="2" data-xl-items="3" data-stage-padding="15" data-loop="true" data-margin="30" data-mouse-drag="false" data-dots="true" data-autoplay="true">
